@@ -246,6 +246,8 @@ AT_BANNER([Boost header-only libraries])
 
 AT_CHECK_MACRO([BOOST_CONVERSION])
 AT_CHECK_MACRO([BOOST_FOREACH])
+AT_CHECK_MACRO([BOOST_FORMAT])
+AT_CHECK_MACRO([BOOST_UTILITY])
 
 AT_BANNER([Boost libraries])
 
